--- a/final-framework/final-sharding/pom.xml
+++ b/final-framework/final-sharding/pom.xml
@@ -34,6 +34,12 @@
             <groupId>org.ifinal.finalframework</groupId>
             <artifactId>final-annotation</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.ifinal.finalframework.auto</groupId>
+            <artifactId>final-auto-core</artifactId>
+            <optional>true</optional>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
