--- a/pom.xml
+++ b/pom.xml
@@ -247,9 +247,10 @@
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>${maven-checkstyle-plugin.version}</version>
                 <configuration>
+                    <!-- Check style file path -->
                     <configLocation>src/checkstyle/checkstyle.xml</configLocation>
+                    <!-- include test source -->
                     <includeTestSourceDirectory>true</includeTestSourceDirectory>
-                    <excludes>**/autogen/**/*</excludes>
                 </configuration>
                 <executions>
                     <execution>
