--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xmlns="http://maven.apache.org/POM/4.0.0"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <artifactId>final-frameworks</artifactId>
+
     <build>
         <pluginManagement>
             <plugins>
@@ -46,9 +46,9 @@
                     <consoleOutput>true</consoleOutput>
                     <excludes>**/generated-sources/**/*</excludes>
                     <excludes>**/autogen/**/*</excludes>
-                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
                     <failOnViolation>true</failOnViolation>
                     <failsOnError>true</failsOnError>
+                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
                 </configuration>
                 <dependencies>
                     <!-- https://mvnrepository.com/artifact/com.puppycrawl.tools/checkstyle -->
@@ -72,6 +72,142 @@
             </plugin>
         </plugins>
     </build>
+
+    <description>Final framework with Spring Boot</description>
+    <developers>
+        <developer>
+            <email>569553290@qq.com</email>
+            <id>likly</id>
+            <name>likly</name>
+            <roles>
+                <role>Owner</role>
+            </roles>
+            <timezone>+8</timezone>
+        </developer>
+    </developers>
+
+    <groupId>org.ifinal.finalframework.frameworks</groupId>
+    <artifactId>final-frameworks</artifactId>
+    <licenses>
+        <license>
+            <name>The Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+    <modelVersion>4.0.0</modelVersion>
+    <modules>
+        <module>final-framework</module>
+        <module>final-auto</module>
+        <module>final-boot</module>
+        <module>final-example</module>
+    </modules>
+
+    <name>${project.groupId}:${project.artifactId}</name>
+
+
+    <packaging>pom</packaging>
+
+    <parent>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <groupId>org.springframework.boot</groupId>
+        <relativePath/>
+        <version>2.3.3.RELEASE</version> <!-- lookup parent from repository -->
+    </parent>
+
+    <profiles>
+        <profile>
+            <id>deploy</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                                <phase>package</phase>
+                            </execution>
+                        </executions>
+                        <groupId>org.apache.maven.plugins</groupId>
+                    </plugin>
+                    <plugin>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                                <phase>verify</phase>
+                            </execution>
+                        </executions>
+                        <groupId>org.apache.maven.plugins</groupId>
+                    </plugin>
+                </plugins>
+            </build>
+            <distributionManagement>
+                <repository>
+                    <id>ossrh</id>
+                    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+                </repository>
+                <snapshotRepository>
+                    <id>ossrh</id>
+                    <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+                </snapshotRepository>
+            </distributionManagement>
+        </profile>
+        <profile>
+            <id>dmall</id>
+            <distributionManagement>
+                <repository>
+                    <id>dmall.com</id>
+                    <url>http://nexus.dmall.com:8081/nexus/content/repositories/3rd</url>
+                </repository>
+                <snapshotRepository>
+                    <id>dmall.com</id>
+                    <url>http://nexus.dmall.com:8081/nexus/content/repositories/snapshots</url>
+                </snapshotRepository>
+            </distributionManagement>
+        </profile>
+    </profiles>
+    <properties>
+        <apache.commons.collections4.vserion>4.4</apache.commons.collections4.vserion>
+        <apache.commons.lang3.vserion>3.11</apache.commons.lang3.vserion>
+        <dubbo.boot.version>2.7.8</dubbo.boot.version>
+        <final.version>1.0.3-SNAPSHOT</final.version>
+        <findbugs-maven-plugin.version>3.0.2</findbugs-maven-plugin.version>
+        <guava.version>30.0-jre</guava.version>
+        <jacoco-maven-plugin.version>0.8.5</jacoco-maven-plugin.version>
+        <java.version>1.8</java.version>
+        <maven-checkstyle-plugin.version>3.1.1</maven-checkstyle-plugin.version>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+        <mybatis.spring.boot.version>2.1.0</mybatis.spring.boot.version>
+        <mybatis.version>3.5.6</mybatis.version>
+        <okhttp.version>3.14.7</okhttp.version>
+        <pagehelper.version>5.2.0</pagehelper.version>
+        <retrofit.version>2.8.1</retrofit.version>
+        <sharding.version>5.0.0-alpha</sharding.version>
+        <sharding4.version>4.1.1</sharding4.version>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+
+
+        <sonar.moduleKey>${project.groupId}:${project.artifactId}</sonar.moduleKey>
+        <sonar.organization>likly</sonar.organization>
+        <sonar.projectKey>likly_final-frameworks</sonar.projectKey>
+
+        <!--CI-->
+        <spring.boot.version>2.3.3.RELEASE</spring.boot.version>
+        <squareup.javapoet.version>1.13.0</squareup.javapoet.version>
+        <velocity.core.version>2.1</velocity.core.version>
+        <velocity.tool.version>3.0</velocity.tool.version>
+    </properties>
+    <scm>
+        <connection>scm:git:git://github.com/likly/final-frameworks.git</connection>
+        <developerConnection>scm:git:ssh://github.com:likly/final-frameworks.git</developerConnection>
+        <url>http://github.com/likly/final-frameworks/tree/master</url>
+    </scm>
+
 
     <dependencies>
         <dependency>
@@ -150,146 +286,10 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-    <description>Final framework with Spring Boot</description>
-    <developers>
-        <developer>
-            <email>569553290@qq.com</email>
-            <id>likly</id>
-            <name>likly</name>
-            <roles>
-                <role>Owner</role>
-            </roles>
-            <timezone>+8</timezone>
-        </developer>
-    </developers>
-
-    <groupId>org.ifinal.finalframework.frameworks</groupId>
-    <licenses>
-        <license>
-            <name>The Apache License, Version 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-        </license>
-    </licenses>
-    <modelVersion>4.0.0</modelVersion>
-
-    <modules>
-        <module>final-framework</module>
-        <module>final-auto</module>
-        <module>final-boot</module>
-        <module>final-example</module>
-    </modules>
-
-    <name>${project.groupId}:${project.artifactId}</name>
-
-    <packaging>pom</packaging>
-
-    <parent>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <groupId>org.springframework.boot</groupId>
-        <relativePath/>
-        <version>2.3.3.RELEASE</version> <!-- lookup parent from repository -->
-    </parent>
-
-
-    <profiles>
-        <profile>
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-javadoc-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <goals>
-                                    <goal>jar</goal>
-                                </goals>
-                                <phase>package</phase>
-                            </execution>
-                        </executions>
-                        <groupId>org.apache.maven.plugins</groupId>
-                    </plugin>
-                    <plugin>
-                        <artifactId>maven-gpg-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <goals>
-                                    <goal>sign</goal>
-                                </goals>
-                                <phase>verify</phase>
-                            </execution>
-                        </executions>
-                        <groupId>org.apache.maven.plugins</groupId>
-                    </plugin>
-                </plugins>
-            </build>
-            <distributionManagement>
-                <repository>
-                    <id>ossrh</id>
-                    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-                </repository>
-                <snapshotRepository>
-                    <id>ossrh</id>
-                    <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-                </snapshotRepository>
-            </distributionManagement>
-            <id>deploy</id>
-        </profile>
-        <profile>
-            <distributionManagement>
-                <repository>
-                    <id>dmall.com</id>
-                    <url>http://nexus.dmall.com:8081/nexus/content/repositories/3rd</url>
-                </repository>
-                <snapshotRepository>
-                    <id>dmall.com</id>
-                    <url>http://nexus.dmall.com:8081/nexus/content/repositories/snapshots</url>
-                </snapshotRepository>
-            </distributionManagement>
-            <id>dmall</id>
-        </profile>
-    </profiles>
-
-    <properties>
-        <apache.commons.collections4.vserion>4.4</apache.commons.collections4.vserion>
-        <apache.commons.lang3.vserion>3.11</apache.commons.lang3.vserion>
-        <dubbo.boot.version>2.7.8</dubbo.boot.version>
-        <final.version>1.0.3-SNAPSHOT</final.version>
-        <findbugs-maven-plugin.version>3.0.2</findbugs-maven-plugin.version>
-        <guava.version>30.0-jre</guava.version>
-        <jacoco-maven-plugin.version>0.8.5</jacoco-maven-plugin.version>
-        <java.version>1.8</java.version>
-        <maven-checkstyle-plugin.version>3.1.1</maven-checkstyle-plugin.version>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-        <mybatis.spring.boot.version>2.1.0</mybatis.spring.boot.version>
-        <mybatis.version>3.5.6</mybatis.version>
-        <okhttp.version>3.14.7</okhttp.version>
-        <pagehelper.version>5.2.0</pagehelper.version>
-        <retrofit.version>2.8.1</retrofit.version>
-        <sharding.version>5.0.0-alpha</sharding.version>
-        <sharding4.version>4.1.1</sharding4.version>
-        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-
-
-        <sonar.moduleKey>${project.groupId}:${project.artifactId}</sonar.moduleKey>
-        <sonar.organization>likly</sonar.organization>
-        <sonar.projectKey>likly_final-frameworks</sonar.projectKey>
-
-        <!--CI-->
-        <spring.boot.version>2.3.3.RELEASE</spring.boot.version>
-        <squareup.javapoet.version>1.13.0</squareup.javapoet.version>
-        <velocity.core.version>2.1</velocity.core.version>
-        <velocity.tool.version>3.0</velocity.tool.version>
-    </properties>
-
-    <scm>
-        <connection>scm:git:git://github.com/likly/final-frameworks.git</connection>
-        <developerConnection>scm:git:ssh://github.com:likly/final-frameworks.git
-        </developerConnection>
-        <url>http://github.com/likly/final-frameworks/tree/master</url>
-    </scm>
 
 
     <url>https://github.com/likly/final-frameworks</url>
+
 
     <version>1.0.3-SNAPSHOT</version>
 
