[U] add mybatis test

--- a/final-framework/final-mybatis/pom.xml
+++ b/final-framework/final-mybatis/pom.xml
@@ -48,6 +48,11 @@
             <groupId>org.ifinal.finalframework</groupId>
             <artifactId>final-data</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <modelVersion>4.0.0</modelVersion>
