--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
         <retrofit.version>2.8.1</retrofit.version>
         <sharding.version>5.0.0-alpha</sharding.version>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-
+        <h2.version>1.4.200</h2.version>
 
         <sonar.moduleKey>${project.groupId}:${project.artifactId}</sonar.moduleKey>
         <sonar.organization>likly</sonar.organization>
@@ -209,6 +209,14 @@
                 <groupId>com.github.pagehelper</groupId>
                 <version>${pagehelper.version}</version>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+            <dependency>
+                <groupId>com.h2database</groupId>
+                <artifactId>h2</artifactId>
+                <version>${h2.version}</version>
+                <scope>test</scope>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
     <build>
