--- a/final-boot/pom.xml
+++ b/final-boot/pom.xml
@@ -66,6 +66,11 @@
                 <version>${final.version}</version>
             </dependency>
             <dependency>
+                <artifactId>final-boot-starter-dubbo</artifactId>
+                <groupId>org.ifinal.finalframework.boot</groupId>
+                <version>${final.version}</version>
+            </dependency>
+            <dependency>
                 <artifactId>final-boot-starter-monitor</artifactId>
                 <groupId>org.ifinal.finalframework.boot</groupId>
                 <version>${final.version}</version>
@@ -105,6 +110,7 @@
         <module>final-boot-starter-zookeeper</module>
         <module>final-boot-starter-dashboard</module>
         <module>final-boot-starter-sharding</module>
+        <module>final-boot-starter-dubbo</module>
     </modules>
     <packaging>pom</packaging>
 
