--- a/final-framework/final-sharding/pom.xml
+++ b/final-framework/final-sharding/pom.xml
@@ -34,6 +34,10 @@
             <groupId>org.ifinal.finalframework.annotation</groupId>
             <artifactId>final-annotation-sharding</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.ifinal.finalframework.annotation</groupId>
+            <artifactId>final-annotation-data</artifactId>
+        </dependency>
     </dependencies>
 
 
