--- a/final-framework/final-dashboard/pom.xml
+++ b/final-framework/final-dashboard/pom.xml
@@ -2,6 +2,13 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xmlns="http://maven.apache.org/POM/4.0.0"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
+    <parent>
+        <artifactId>final-framework</artifactId>
+        <groupId>org.ifinal.finalframework</groupId>
+        <version>1.1.1-SNAPSHOT</version>
+    </parent>
     <artifactId>final-dashboard</artifactId>
     <dependencies>
         <dependency>
@@ -16,7 +23,7 @@
         </dependency>
         <dependency>
             <artifactId>final-mybatis</artifactId>
-            <groupId>org.ifinal.finalframework</groupId>
+            <groupId>org.ifinal.finalframework.data</groupId>
             <optional>true</optional>
         </dependency>
         <dependency>
@@ -27,17 +34,10 @@
         <dependency>
             <artifactId>final-devops</artifactId>
             <groupId>org.ifinal.finalframework</groupId>
-            <version>1.1.0-SNAPSHOT</version>
+            <version>1.1.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
-    <modelVersion>4.0.0</modelVersion>
-
-    <parent>
-        <artifactId>final-framework</artifactId>
-        <groupId>org.ifinal.finalframework</groupId>
-        <version>1.1.0-SNAPSHOT</version>
-    </parent>
 
 
 </project>
