--- a/final-framework/final-spiriter/final-spiriter-jdbc/pom.xml
+++ b/final-framework/final-spiriter/final-spiriter-jdbc/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>final-spiriter</artifactId>
         <groupId>org.ifinal.finalframework.spiriter</groupId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>1.1.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -27,7 +27,7 @@
             <artifactId>final-data-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.ifinal.finalframework</groupId>
+            <groupId>org.ifinal.finalframework.data</groupId>
             <artifactId>final-mybatis</artifactId>
         </dependency>
         <dependency>
