remove final-boot-autoconfiguration

--- a/final-boot/final-boot-starter-sharding/pom.xml
+++ b/final-boot/final-boot-starter-sharding/pom.xml
@@ -15,6 +15,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.ifinal.finalframework.boot</groupId>
+            <artifactId>final-boot-starter</artifactId>
+        </dependency>
+        <dependency>
             <artifactId>final-sharding</artifactId>
             <groupId>org.ifinal.finalframework.data</groupId>
         </dependency>
