--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -54,7 +54,7 @@ plugins:
   #  - jekyll-github-metadata
   #- jekyll-optional-front-matter
   #- jekyll-paginate
-  #- jekyll-readme-index
+  - jekyll-readme-index
   #- jekyll-titles-from-headings
   #- jekyll-relative-links
 #data_dir: datas
