--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -17,6 +17,8 @@ gem "minima", "~> 2.5"
 group :jekyll_plugins do
   gem "jekyll-feed", "~> 0.12"
   gem "jekyll-readme-index"
+  gem "kramdown-syntax-coderay"
+  gem 'jekyll-relative-links'
 end
 
 # Windows and JRuby does not include zoneinfo files, so bundle the tzinfo-data gem
