--- a/final-data/final-data-redis/pom.xml
+++ b/final-data/final-data-redis/pom.xml
@@ -32,6 +32,7 @@
         <dependency>
             <artifactId>final-auto-spring</artifactId>
             <groupId>org.ifinal.finalframework.auto</groupId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
