--- a/final-framework/final-dashboard/pom.xml
+++ b/final-framework/final-dashboard/pom.xml
@@ -14,7 +14,7 @@
         <dependency>
             <artifactId>final-data-redis</artifactId>
             <groupId>org.ifinal.finalframework.data</groupId>
-            <optional>true</optional>
+            <!--<optional>true</optional>-->
         </dependency>
         <dependency>
             <artifactId>final-zookeeper</artifactId>
