--- a/final-boot/final-boot-starter-mybatis/pom.xml
+++ b/final-boot/final-boot-starter-mybatis/pom.xml
@@ -11,6 +11,7 @@
         <dependency>
             <artifactId>final-data-mybatis</artifactId>
             <groupId>org.ifinal.finalframework.data</groupId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <artifactId>final-auto-query</artifactId>
