--- a/docs/_data/sidebar/en/docs.yml
+++ b/docs/_data/sidebar/en/docs.yml
@@ -6,6 +6,8 @@ menus:
     icon: surfing
     name: Quick Start
     menus:
+      - id: start-project
+        name: Start Project
       - id: start-entity
         name: Start Entity
         menus:
