--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -19,6 +19,8 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Final
+logo: FFL
+name: FinalFramework
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
