--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Final
-logo: FFL
+logo: /assets/images/logos/github.svg
 name: FinalFramework
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
