--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -22,6 +22,7 @@ title: Final
 logo: /assets/images/logos/github.svg
 name: FinalFramework
 email: your-email@example.com
+github: https://github.com/likly/final-frameworks
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
