--- a/final-starter/final-boot-starter-redis/pom.xml
+++ b/final-starter/final-boot-starter-redis/pom.xml
@@ -10,5 +10,16 @@
         <version>1.1.2-SNAPSHOT</version>
     </parent>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.ifinal.finalframework.starter</groupId>
+            <artifactId>final-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.ifinal.finalframework.data</groupId>
+            <artifactId>final-data-redis</artifactId>
+        </dependency>
+    </dependencies>
+
 
 </project>
