--- a/final-example/final-example-web/pom.xml
+++ b/final-example/final-example-web/pom.xml
@@ -59,6 +59,11 @@
             <groupId>com.taobao.arthas</groupId>
             <version>3.4.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.ifinal.finalframework</groupId>
+            <artifactId>final-logging</artifactId>
+            <version>1.1.2.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <modelVersion>4.0.0</modelVersion>
