--- a/final-framework/final-logging/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/final-framework/final-logging/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -9,21 +9,21 @@
     {
       "name": "logging.file.path",
       "type": "java.lang.String",
-      "description": "",
+      "description": "file path.",
       "sourceType": "org.ifinal.finalframework.logging.LoggingExtApplicationListener",
       "defaultValue": "logs"
     },
     {
       "name": "logging.pattern.rolling-file-suffix",
       "type": "java.lang.String",
-      "description": "",
+      "description": "rolling file suffix.",
       "sourceType": "org.ifinal.finalframework.logging.LoggingExtApplicationListener",
       "defaultValue": ".%d{yyyy-MM-dd}.%i.gz"
     },
     {
       "name": "logging.logger",
       "type": "java.util.Map<java.lang.String,java.lang.String>",
-      "description": "",
+      "description": "logger file name.",
       "sourceType": "org.ifinal.finalframework.logging.LoggingExtApplicationListener"
     }
   ]
