--- a/final-auto/final-auto-spring/pom.xml
+++ b/final-auto/final-auto-spring/pom.xml
@@ -2,7 +2,17 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xmlns="http://maven.apache.org/POM/4.0.0"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+    <modelVersion>4.0.0</modelVersion>
+
+    <parent>
+        <artifactId>final-auto</artifactId>
+        <groupId>org.ifinal.finalframework.auto</groupId>
+        <version>1.1.2.1-SNAPSHOT</version>
+    </parent>
+
     <artifactId>final-auto-spring</artifactId>
+
     <dependencies>
         <dependency>
             <artifactId>final-auto-core</artifactId>
@@ -15,16 +25,12 @@
         <dependency>
             <artifactId>spring-boot-starter-web</artifactId>
             <groupId>org.springframework.boot</groupId>
+            <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
-    <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <artifactId>final-auto</artifactId>
-        <groupId>org.ifinal.finalframework.auto</groupId>
-        <version>1.1.2.1-SNAPSHOT</version>
-    </parent>
 
 
 </project>
