--- a/final-framework/final-context/pom.xml
+++ b/final-framework/final-context/pom.xml
@@ -12,29 +12,37 @@
             <groupId>org.ifinal.finalframework.annotation</groupId>
             <artifactId>final-annotation-resource</artifactId>
         </dependency>
+        <!--<dependency>-->
+        <!--    <artifactId>spring-boot-starter-web</artifactId>-->
+        <!--    <groupId>org.springframework.boot</groupId>-->
+        <!--</dependency>-->
         <dependency>
-            <artifactId>spring-boot-starter-web</artifactId>
-            <groupId>org.springframework.boot</groupId>
-        </dependency>
-        <dependency>
-            <artifactId>final-auto-spring</artifactId>
             <groupId>org.ifinal.finalframework.auto</groupId>
+            <artifactId>final-auto-spring</artifactId>
         </dependency>
         <dependency>
-            <artifactId>spring-tx</artifactId>
             <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <optional>true</optional>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <artifactId>validation-api</artifactId>
             <groupId>javax.validation</groupId>
         </dependency>
         <dependency>
-            <artifactId>final-core</artifactId>
             <groupId>org.ifinal.finalframework</groupId>
+            <artifactId>final-core</artifactId>
         </dependency>
         <dependency>
             <groupId>org.ifinal.finalframework</groupId>
             <artifactId>final-json</artifactId>
+        </dependency>
+        <dependency>
+            <artifactId>pagehelper</artifactId>
+            <groupId>com.github.pagehelper</groupId>
+            <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
