--- a/final-framework/final-web/pom.xml
+++ b/final-framework/final-web/pom.xml
@@ -41,6 +41,8 @@
         <dependency>
             <artifactId>pagehelper</artifactId>
             <groupId>com.github.pagehelper</groupId>
+            <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.ifinal.finalframework.annotation</groupId>
