--- a/final-framework/final-monitor/pom.xml
+++ b/final-framework/final-monitor/pom.xml
@@ -17,6 +17,12 @@
             <groupId>org.mybatis</groupId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <scope>provided</scope>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
             <groupId>org.ifinal.finalframework.annotation</groupId>
             <artifactId>final-annotation-monitor</artifactId>
         </dependency>
