--- a/final-example/final-example-web/pom.xml
+++ b/final-example/final-example-web/pom.xml
@@ -48,6 +48,10 @@
             <groupId>org.ifinal.finalframework.starter</groupId>
             <artifactId>final-boot-starter-redis</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.ifinal.finalframework.starter</groupId>
+            <artifactId>final-boot-starter-security</artifactId>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.benf/cfr -->
         <dependency>
             <artifactId>cfr</artifactId>
