--- a/final-starter/pom.xml
+++ b/final-starter/pom.xml
@@ -29,6 +29,7 @@
         <module>final-boot-starter-sharding</module>
         <module>final-boot-starter-dubbo</module>
         <module>final-boot-starter-logging</module>
+        <module>final-boot-starter-security</module>
     </modules>
 
     <dependencyManagement>
@@ -112,6 +113,11 @@
             </dependency>
             <dependency>
                 <artifactId>final-boot-starter-sharding</artifactId>
+                <groupId>org.ifinal.finalframework.starter</groupId>
+                <version>${final.version}</version>
+            </dependency>
+            <dependency>
+                <artifactId>final-boot-starter-security</artifactId>
                 <groupId>org.ifinal.finalframework.starter</groupId>
                 <version>${final.version}</version>
             </dependency>
