add final-poi module

--- a/final-annotation/pom.xml
+++ b/final-annotation/pom.xml
@@ -24,6 +24,7 @@
         <module>final-annotation-cache</module>
         <module>final-annotation-resource</module>
         <module>final-annotation-web</module>
+        <module>final-annotation-poi</module>
     </modules>
 
     <dependencyManagement>
@@ -76,6 +77,11 @@
             <dependency>
                 <groupId>org.ifinal.finalframework.annotation</groupId>
                 <artifactId>final-annotation-web</artifactId>
+                <version>${final.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.ifinal.finalframework.annotation</groupId>
+                <artifactId>final-annotation-poi</artifactId>
                 <version>${final.version}</version>
             </dependency>
         </dependencies>
