--- a/final-framework/final-data/pom.xml
+++ b/final-framework/final-data/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <artifactId>final-data</artifactId>
+        <artifactId>final-framework</artifactId>
         <groupId>org.ifinal.finalframework</groupId>
         <version>1.1.2.1-SNAPSHOT</version>
     </parent>
