--- a/final-annotation/pom.xml
+++ b/final-annotation/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>final-frameworks</artifactId>
         <groupId>org.ifinal.finalframework.frameworks</groupId>
-        <version>1.1.3-SNAPSHOT</version>
+        <version>1.1.3</version>
     </parent>
     <packaging>pom</packaging>
     <groupId>org.ifinal.finalframework.annotation</groupId>
