--- a/final-auto/final-auto-annotation/pom.xml
+++ b/final-auto/final-auto-annotation/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>final-auto</artifactId>
         <groupId>org.ifinal.finalframework.auto</groupId>
-        <version>1.1.3-SNAPSHOT</version>
+        <version>1.1.3</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>final-auto-annotation</artifactId>
