--- a/final-auto/final-auto-core/pom.xml
+++ b/final-auto/final-auto-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>final-auto</artifactId>
         <groupId>org.ifinal.finalframework.auto</groupId>
-        <version>1.1.3-SNAPSHOT</version>
+        <version>1.1.3</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
