--- a/final-auto/final-auto-spring/pom.xml
+++ b/final-auto/final-auto-spring/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <artifactId>final-auto</artifactId>
         <groupId>org.ifinal.finalframework.auto</groupId>
-        <version>1.1.3-SNAPSHOT</version>
+        <version>1.1.3</version>
     </parent>
 
     <artifactId>final-auto-spring</artifactId>
