--- a/final-auto/pom.xml
+++ b/final-auto/pom.xml
@@ -100,9 +100,9 @@
     <parent>
         <artifactId>final-frameworks</artifactId>
         <groupId>org.ifinal.finalframework.frameworks</groupId>
-        <version>1.1.3-SNAPSHOT</version>
+        <version>1.1.3</version>
     </parent>
 
-    <version>1.1.3-SNAPSHOT</version>
+    <version>1.1.3</version>
 
 </project>
