--- a/final-framework/final-monitor/pom.xml
+++ b/final-framework/final-monitor/pom.xml
@@ -35,6 +35,6 @@
     <parent>
         <artifactId>final-framework</artifactId>
         <groupId>org.ifinal.finalframework</groupId>
-        <version>1.1.3-SNAPSHOT</version>
+        <version>1.1.3</version>
     </parent>
 </project>
