--- a/final-starter/final-boot-starter-logging/pom.xml
+++ b/final-starter/final-boot-starter-logging/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>final-starter</artifactId>
         <groupId>org.ifinal.finalframework.starter</groupId>
-        <version>1.1.3-SNAPSHOT</version>
+        <version>1.1.3</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
