--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     </parent>
     <groupId>org.ifinal.finalframework.frameworks</groupId>
     <artifactId>final-frameworks</artifactId>
-    <version>1.1.3-SNAPSHOT</version>
+    <version>1.1.3</version>
 
     <name>${project.groupId}:${project.artifactId}</name>
     <description>Final framework with Spring Boot</description>
@@ -28,7 +28,7 @@
         <lombok.version>1.18.16</lombok.version>
         <spring.boot.version>2.3.3.RELEASE</spring.boot.version>
         <dubbo.boot.version>2.7.8</dubbo.boot.version>
-        <final.version>1.1.3-SNAPSHOT</final.version>
+        <final.version>1.1.3</final.version>
         <findbugs-maven-plugin.version>3.0.2</findbugs-maven-plugin.version>
         <guava.version>30.0-jre</guava.version>
         <jacoco-maven-plugin.version>0.8.5</jacoco-maven-plugin.version>
@@ -42,9 +42,9 @@
         <pagehelper.version>5.2.0</pagehelper.version>
         <retrofit.version>2.8.1</retrofit.version>
         <sharding.version>5.0.0-alpha</sharding.version>
-        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <h2.version>1.4.200</h2.version>
 
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <sonar.moduleKey>${project.groupId}:${project.artifactId}</sonar.moduleKey>
         <sonar.organization>likly</sonar.organization>
         <sonar.projectKey>likly_final-frameworks</sonar.projectKey>
@@ -114,10 +114,11 @@
     <url>https://github.com/likly/final-frameworks</url>
 
     <scm>
-        <connection>scm:git:git://github.com/likly/final-frameworks.git</connection>
-        <developerConnection>scm:git:ssh://github.com:likly/final-frameworks.git</developerConnection>
-        <url>http://github.com/likly/final-frameworks/tree/master</url>
+        <connection>scm:git:git://github.com/final-projects/final-framework.git</connection>
+        <developerConnection>scm:git:ssh://github.com:final-projects/final-framework.git</developerConnection>
+        <url>http://github.com/final-projects/final-framework/tree/master</url>
     </scm>
+
     <developers>
         <developer>
             <email>569553290@qq.com</email>
